# extension-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile.devel  Dockerfile.vastai  README.md  main.cpp  requirements.txt  setup.py  sum_integers.hpp  test.cpp  vcpkg.json
calculator/: CMakeLists.txt
calculator/csrc/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
calculator/tests/: CMakeLists.txt  calculator.cpp
cmake/: cc_test.cmake  cfg_cuda.cmake  cfg_python.cmake  cfg_test.cmake  cfg_torch.cmake  cfg_vcpkg.cmake  find_python.cmake  find_torch.cmake  resolve_cuda.cmake  resolve_python.cmake  resolve_test.cmake  resolve_torch.cmake  resolve_vcpkg.cmake  utils.cmake
docker/: Dockerfile.devel
example-app/: mul.cpp
extension_cpp/: CMakeLists.txt  ops.py  ops_test.py  setup.py
extension_cpp/csrc/: CMakeLists.txt  module.cpp  muladd.cpp  muladd.h  muladd_test.cpp
extension_cpp/csrc/cpu/: CMakeLists.txt  muladd.h  muladd_test.cpp  torch_bindings.cpp
extension_cpp/csrc/cuda/: CMakeLists.txt  muladd.cu  muladd.cuh  muladd_test.cu
scripts/: setup_dev.sh
scripts/common/: install_gcc.sh  install_vscode.sh
